--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="robots" content="index, follow">
     
     <!-- Additional Meta Tags -->
-    <meta name="theme-color" content="#5871E0">
-    <meta name="msapplication-TileColor" content="#5871E0">
+    <meta name="theme-color" content="#0d6efd">
+    <meta name="msapplication-TileColor" content="#0d6efd">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Marco Magdy Portfolio">
