--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </li>
               <!-- dropdown -->
               <li class="nav-item dropdown">
-                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">About Me</button>
+                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="about">About Me</button>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-1" href="#info">My Story</a></li>
                   <li><a class="dropdown-2" href="#education">My Education</a></li>
