--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                             <p class="card-text text-light">Built with HTML, CSS, and JavaScript, featuring task creation, deletion, and prioritization functionalities. </p>
                             <p class="card-text text-light">Implemented Simple UI/UX design, ensuring accessibility and responsiveness across devices. </p>
                             <p class="card-text text-light">The project enhanced task management capabilities, providing users with a streamlined interface to manage daily activities effectively.</p>
-                            <a href="https://github.com/Marcomagdy908/to-do-list" class="btn btn-primary">View Project in github</a>
-                            <a href="https://to-do-list85623.netlify.app/" class="btn btn-primary">View Demo</a>
+                            <a href="https://github.com/Marcomagdy908/to-do-list" class="btn btn-primary" style="margin-top: 10px;">View Project in github</a>
+                            <a href="https://to-do-list85623.netlify.app/" class="btn btn-primary" style="margin-top:10px ;">View Demo</a>
                           </div>
                         </div>
                       </div>
