--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               </div>
               <!-- end flying icons -->
               <!-- education -->
-              <div class="container-fluid education  align-items-center" style="z-index: 2;">
+              <div class="container-fluid education  align-items-center" style="z-index: 2;" id="education">
                   <h1 class="fw-bold mb-4 text-center text-dark">Education</h1>
                   <div class="underline"></div>
                   <div class="row text-start text-dark education-info" data-aos="fade-right" data-aos-duration="1000">
